Add an optional note field for post flags e621ng/e621ng@da2f44f4b814f6e376ebf7a7409dd6e052ec1a4f e621ng/e621ng@9ca2895929f3a73ede21bc3b3730d6e9f3967a0c e621ng/e621ng@0c19569127cb93c2ef881dfa2c9aacaa9ee3f68c

--- a/app/javascript/src/styles/base.scss
+++ b/app/javascript/src/styles/base.scss
@@ -11,6 +11,8 @@
 
 @import "common/helper_classes.scss";
 @import "common/helper_palette.scss";
+@import "common/standard_variables.scss";
+@import "common/standard_elements.scss";
 @import "common/autocomplete.scss";
 @import "common/blacklists.scss";
 @import "common/containers.scss";
