--- a/app/views/admin/configs/show.html.erb
+++ b/app/views/admin/configs/show.html.erb
@@ -77,6 +77,7 @@
       <%= number_config_field(@config, :user_feedback_max_size, name: "User Feedback Max Size", disabled: !edit) %>
       <%= number_config_field(@config, :news_update_max_size, name: "News Update Max Size", disabled: !edit) %>
       <%= number_config_field(@config, :disapproval_message_max_size, name: "Disapproval Message Max Size", disabled: !edit) %>
+      <%= number_config_field(@config, :post_flag_note_max_size, name: "Post Flag Max Size", disabled: !edit) %>
       <%= number_config_field(@config, :max_image_width, name: "Max Image Width", disabled: !edit) %>
       <%= number_config_field(@config, :max_image_height, name: "Max Image Height", disabled: !edit) %>
       <%= number_config_field(@config, :max_upload_per_request, name: "Max Upload Per Request", disabled: !edit, hint: "The size in megabytes after which uploads will be split") %>
