--- a/app/views/posts/flags/_new.html.erb
+++ b/app/views/posts/flags/_new.html.erb
@@ -1,10 +1,7 @@
 <div class="flag-dialog-preview">
-
   <div class="flag_post">
     <%= PostPresenter.preview(@post, show_deleted: true, no_blacklist: true) %>
   </div>
-
-
   <div class="dtext-container">
     <%= format_text(safe_wiki(Config.instance.flag_notice_wiki_page).body) %>
   </div>
@@ -12,31 +9,46 @@
 
 
 <div class="flag-dialog-body">
-
   <%= error_messages_for(:post_flag) %>
-
   <%= custom_form_for(post_flag) do |f| %>
     <%= f.hidden_field(:post_id) %>
+    <div class="flag-reason">
+      <% FemboyFans.config.flag_reasons.each do |flag_reason| %>
+        <% if flag_reason[:name] == "uploading_guidelines" && !@post.flaggable_for_guidelines?(CurrentUser.user) %>
+          <% next %>
+        <% end %>
 
-    <% FemboyFans.config.flag_reasons.each do |flag_reason| %>
-      <% if flag_reason[:name] == "uploading_guidelines" && !@post.flaggable_for_guidelines?(CurrentUser.user) %>
-        <% next %>
+        <label class="flag-reason-label">
+          <%= radio_button_tag "post_flag[reason_name]", flag_reason[:name], false, data: { require_explanation: flag_reason[:require_explanation] } %>
+          <span class="flag-reason-description">
+            <b>
+              <%= format_text(flag_reason[:reason], inline: true) %>
+              <% if flag_reason[:require_explanation] %>
+                <span class="flag-reason-explanation">Additional Details Required</span>
+              <% end %>
+            </b>
+            <span class="dtext-container">
+              <%= format_text(flag_reason[:text]) %>
+            </span>
+          </span>
+        </label>
+
+        <% if flag_reason[:parent] %>
+          <span class="flag-reason-parent">
+            <%= f.input :parent_id, as: :string, label: "Inferior of Post #", input_html: { value: @post.parent_id || "" } %>
+          </span>
+        <% end %>
+
       <% end %>
+    </div>
 
-      <label>
-        <%= radio_button_tag("post_flag[reason_name]", flag_reason[:name], false) %>
-        <span class="flag-reason-title"><%= format_text(flag_reason[:reason], inline: true) %></span>
-        <div class="dtext-container flag-reason-text"><%= format_text(flag_reason[:text]) %></div>
-      </label>
-
-      <% if flag_reason[:parent] %>
-        <%= f.input(:parent_id, as: :string, label: "Inferior of Post #") %>
-      <% end %>
-
-    <% end %>
+    <div class="flag-notes">
+      <%= f.input(:note, as: :dtext, label: "Additional Details", limit: Config.post_flag_note_max_size, input_html: { id: "flag_note_field" }) %>
+    </div>
 
     <div>
-      <%= f.submit("Submit") %>
+      <span class="flag-note-hint" style="display: none;">Error: Additional note is required for this flag type.</span>
+      <%= f.submit("Submit", data: { disable_with: false }) %>
     </div>
   <% end %>
 </div>
