--- a/app/views/posts/partials/show/_flag_reasons.html.erb
+++ b/app/views/posts/partials/show/_flag_reasons.html.erb
@@ -1,9 +1,9 @@
 <%# locals: (post:, deletion: false) -%>
 <ul>
-  <% post.flags.order(id: :desc).each do |flag| %>
+  <% post.flags.includes(:creator).order(id: :desc).each do |flag| %>
     <li>
       <%= flag.is_deletion ? "[DELETION]" : "[FLAG]" %>
-      <%= format_text(flag.reason, inline: true) %>
+      <%= format_text(flag.reason, inline: true) unless flag.reason.empty? %>
 
       <% if CurrentUser.can_view_flagger_on_post?(flag) %>
         - <%= link_to_user(flag.creator) %>
@@ -17,8 +17,17 @@
       <% if flag.is_resolved? %>
         <span class="resolved">RESOLVED</span>
       <% end %>
+
+      <% if flag.note.present? && flag.can_see_note?(CurrentUser.user) %>
+        <div class="post-flag-note">
+          <div class="post-flag-note-header">» Notes</div>
+          <div class="dtext-container post-flag-note-body">
+            <%= format_text(flag.note) %>
+          </div>
+        </div>
+      <% end %>
     </li>
-    <% if post.is_deleted? && flag.is_deletion? && !CurrentUser.user.is_janitor? %>
+    <% if post.is_deleted? && flag.is_deletion? && !CurrentUser.user.is_staff? %>
       <% break %>
     <% end %>
   <% end %>
