Add previews to mascot management pages e621ng/e621ng@5d1051f10ff78d1cc222e0796b58578ef33b6fe2

--- a/app/javascript/src/styles/base.scss
+++ b/app/javascript/src/styles/base.scss
@@ -89,4 +89,7 @@
 @import "specific/wiki_pages.scss";
 @import "specific/wiki_page_versions.scss";
 
+@import "views/mascots";
+@import "views/post_flags";
+
 @import "common/z_responsive.scss";
