--- a/app/views/static/site_map.html.erb
+++ b/app/views/static/site_map.html.erb
@@ -29,7 +29,9 @@
     <%= li_link_to("Keyboard Shortcuts", keyboard_shortcuts_path) %>
     <%= li_link_to("API Documentation", help_page_path(id: "api")) %>
     <%= li_link_to("Stats", stats_path) %>
-    <%= li_link_to("DB Exports", "/db_exports") %>
+    <% if Config.db_exports_path.present? %>
+      <%= li_link_to("DB Exports", Config.db_exports_path) %>
+    <% end %>
   </ul>
   <ul>
     <li><h1>Artists</h1></li>
