--- a/app/views/posts/flags/_new.html.erb
+++ b/app/views/posts/flags/_new.html.erb
@@ -19,7 +19,7 @@
         <% end %>
 
         <label class="flag-reason-label">
-          <%= radio_button_tag "post_flag[reason_name]", flag_reason[:name], false, data: { require_explanation: flag_reason[:require_explanation] } %>
+          <%= radio_button_tag("post_flag[reason_name]", flag_reason[:name], false, data: { require_explanation: flag_reason[:require_explanation] }) %>
           <span class="flag-reason-description">
             <b>
               <%= format_text(flag_reason[:reason], inline: true) %>
@@ -35,7 +35,7 @@
 
         <% if flag_reason[:parent] %>
           <span class="flag-reason-parent">
-            <%= f.input :parent_id, as: :string, label: "Inferior of Post #", input_html: { value: @post.parent_id || "" } %>
+            <%= f.input(:parent_id, as: :string, label: "Inferior of Post #", input_html: { value: @post.parent_id || "" }) %>
           </span>
         <% end %>
 
