--- a/app/views/pools/edit.html.erb
+++ b/app/views/pools/edit.html.erb
@@ -6,7 +6,8 @@
   <%= f.input(:name, as: :string, input_html: { value: @pool.pretty_name }) %>
   <%= f.input(:description, as: :dtext, limit: Config.instance.pool_description_max_size, allow_color: false) %>
   <%= f.input(:post_ids_string, as: :text, label: "Posts") %>
-  <%= f.input(:is_active) %>
+  <%= f.input(:is_ongoing) %>
+  <%= f.input(:category, collection: %w[series collection], include_blank: false) %>
   <%= f.button(:submit) %>
 <% end %>
 
