--- a/app/views/pools/new.html.erb
+++ b/app/views/pools/new.html.erb
@@ -6,7 +6,8 @@
   <%= f.input(:name, as: :string, required: true) %>
   <%= f.input(:description, as: :dtext, limit: Config.instance.pool_description_max_size, allow_color: false) %>
   <%= f.input(:post_ids_string, as: :text, label: "Posts") %>
-  <%= f.input(:is_active) %>
+  <%= f.input(:is_ongoing) %>
+  <%= f.input(:category, collection: [%w[Series/Comic series], %w[Collection collection]], include_blank: true, selected: "", required: true) %>
   <%= f.button(:submit, "Submit") %>
 <% end %>
 
