Age verified user flag

--- a/app/views/admin/users/edit.html.erb
+++ b/app/views/admin/users/edit.html.erb
@@ -18,6 +18,7 @@
   <%= f.input(:no_replacements, collection: [%w[Yes true], %w[No false]], label: "Banned From Replacements") %>
   <%= f.input(:can_manage_aibur, collection: [%w[Yes true], %w[No false]], label: "Manage Tag Change Requests") %>
   <%= f.input(:no_aibur_voting, collection: [%w[Yes true], %w[No false]], label: "No AIBUR Voting") %>
+  <%= f.input(:age_verified, collection: [%w[Yes true], %w[No false]], label: "Age Verified") %>
 
   <%= f.button(:submit, value: "Update") %>
 <% end %>
