--- a/app/views/bulk_update_requests/_secondary_links.html.erb
+++ b/app/views/bulk_update_requests/_secondary_links.html.erb
@@ -1,6 +1,17 @@
 <% content_for(:secondary_links) do %>
   <%= subnav_link_to("Listing", bulk_update_requests_path) %>
   <%= subnav_link_to("New", new_bulk_update_request_path) %>
+  <% if @bulk_update_request %>
+    |
+    <% if @bulk_update_request.forum_topic %>
+      <% if @bulk_update_request.forum_post && !@bulk_update_request.forum_post.is_original_post? %>
+        <%= subnav_link_to("Forum Post", @bulk_update_request.forum_post.topic_link) %>
+      <% else %>
+        <%= subnav_link_to("Forum Topic", forum_topic_path(@bulk_update_request.forum_topic_id)) %>
+      <% end %>
+    <% end %>
+    <%= subnav_link_to("History", bulk_update_request_versions_path(search: { bulk_update_request_id: @bulk_update_request.id })) %>
+  <% end %>
   <% if policy(BulkUpdateRequestImport).create? %>
     |
     <%= subnav_link_to("Import", new_admin_bulk_update_request_import_path) %>
