--- a/app/views/tags/aliases/_secondary_links.html.erb
+++ b/app/views/tags/aliases/_secondary_links.html.erb
@@ -5,6 +5,17 @@
   <%= subnav_link_to("Request alias", new_tag_alias_path) %>
   <%= subnav_link_to("Request bulk update", new_bulk_update_request_path) %>
   <%= subnav_link_to("Help", help_page_path(id: "tag_aliases")) %>
+  <% if @tag_alias %>
+    |
+    <% if @tag_alias.forum_topic %>
+      <% if @tag_alias.forum_post && !@tag_alias.forum_post.is_original_post? %>
+        <%= subnav_link_to("Forum Post", @tag_alias.forum_post.topic_link) %>
+      <% else %>
+        <%= subnav_link_to("Forum Topic", forum_topic_path(@tag_alias.forum_topic_id)) %>
+      <% end %>
+    <% end %>
+    <%= subnav_link_to("History", mod_actions_path(search: { action: "tag_alias_create,tag_alias_update", subject_type: "TagAlias", subject_id: @tag_alias.id })) %>
+  <% end %>
   <% if policy(BulkUpdateRequestImport).create? %>
     |
     <%= subnav_link_to("Import", new_admin_bulk_update_request_import_path) %>
